--- a/requirements.txt
+++ b/requirements.txt
@@ -23,3 +23,7 @@ Requests==2.31.0
 scikit_learn==1.0.1
 xmltodict==0.12.0
 yfinance==0.1.70
+
+gspread~=6.0.2
+google~=3.0.0
+python-dateutil~=2.8.2
