--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,301 @@
+absl-py==2.1.0
+aiofiles==23.2.1
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.7.0
+ansi2html==1.9.1
+anyio==4.4.0
+appdirs==1.4.4
+appnope==0.1.4
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+astor==0.8.1
+asttokens==2.4.1
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.2.0
+Babel==2.15.0
+backcall==0.2.0
+beautifulsoup4==4.12.3
+bitsandbytes==0.42.0
+bleach==6.1.0
+blessed==1.20.0
+blinker==1.8.2
+Brotli==1.1.0
+bs4==0.0.2
+cachelib==0.9.0
+cachetools==5.3.3
+certifi==2024.6.2
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+comm==0.2.2
+contourpy==1.2.1
+cycler==0.12.1
 dash==2.8.1
-dash_ag_grid==2.0.0
-dash_bootstrap_components==1.0.0
-dash_core_components==2.0.0
-dash_extensions==0.0.71
-dash_html_components==2.0.0
-dash_labs==1.0.1
+dash-ag-grid==2.0.0
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-extensions==0.0.71
+dash-html-components==2.0.0
+dash-labs==1.0.1
+dash-table==5.0.0
+dataclass-wizard==0.22.3
+dataclasses-json==0.6.7
+debugpy==1.8.1
+decorator==5.1.1
+defusedxml==0.7.1
+distro==1.9.0
+dnspython==2.6.1
+docstring_parser==0.16
+duckduckgo_search==6.1.5
+editor==1.6.6
+EditorConfig==0.12.4
+et-xmlfile==1.1.0
+exchange_calendars==4.5.4
+executing==2.0.1
+fastjsonschema==2.19.1
+filelock==3.14.0
 Flask==2.0.2
+Flask-Caching==2.3.0
+fonttools==4.53.0
+fqdn==1.5.1
+frozendict==2.4.4
+frozenlist==1.4.1
+fsspec==2024.6.0
+gcloud==0.18.3
+genai==2.1.0
+git-python==1.0.3
+gitdb==4.0.11
+GitPython==3.1.43
+google==3.0.0
+google-ai-generativelanguage==0.6.4
+google-api-core==2.19.0
+google-api-python-client==2.133.0
+google-auth==2.30.0
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.0
+google-cloud==0.34.0
+google-cloud-aiplatform==1.54.1
+google-cloud-bigquery==3.24.0
+google-cloud-core==2.4.1
+google-cloud-quotas==0.1.8
+google-cloud-resource-manager==1.12.3
+google-cloud-storage==2.17.0
+google-crc32c==1.5.0
+google-generativeai==0.6.0
+google-resumable-media==2.7.1
+googleapis-common-protos==1.63.1
+greenlet==3.0.3
+grpc-google-iam-v1==0.13.0
+grpcio==1.64.1
+grpcio-status==1.62.2
+gspread==6.0.2
+gspread-dataframe==3.3.1
+gspread-formatting==1.1.2
 gunicorn==20.0.4
+h11==0.14.0
+h2==4.1.0
+h5py==3.11.0
+hpack==4.0.0
+html2image==2.0.4.3
+html5lib==1.1
+httpcore==1.0.5
+httplib2==0.22.0
+httpx==0.27.0
+huggingface-hub==0.16.4
+hyperframe==6.0.1
+idna==3.7
+importlib_metadata==7.1.0
+inquirer==3.2.4
+ipykernel==6.29.4
+ipython==8.25.0
+ipython-genutils==0.2.0
+ipywidgets==8.1.3
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.1
+Jinja2==3.1.4
+joblib==1.4.2
+jsbeautifier==1.15.1
+json5==0.9.25
+jsonpatch==1.33
+jsonpath-ng==1.6.1
+jsonpointer==3.0.0
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.10.0
+jupyter-highlight-selected-word==0.2.0
+jupyter-lsp==2.2.5
+jupyter_ai_magics==2.16.0
+jupyter_client==8.6.2
+jupyter_contrib_core==0.4.2
+jupyter_contrib_nbextensions==0.7.0
+jupyter_core==5.7.2
+jupyter_nbextensions_configurator==0.6.4
+jupyter_server==2.14.1
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.2
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.2
+jupyterlab_widgets==3.0.11
 keras==2.7.0
+kiwisolver==1.4.5
+korean-lunar-calendar==0.3.1
+langchain==0.2.3
+langchain-community==0.2.4
+langchain-core==0.2.5
+langchain-google-vertexai==1.0.5
+langchain-text-splitters==0.2.1
+langsmith==0.1.77
+litellm==1.40.8
 loopgpt==0.0.15
+lxml==5.2.2
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.3
 matplotlib==3.4.3
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+mistune==3.0.2
+ml-dtypes==0.4.0
+more-itertools==10.3.0
 mplfinance==0.12.7a17
+multidict==6.0.5
+multitasking==0.0.11
+mypy-extensions==1.0.0
+namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+nltk==3.8.1
+notebook==7.2.1
+notebook_shim==0.2.4
 numpy==1.23.2
+oauth2client==4.1.3
+oauthlib==3.2.2
+open-interpreter==0.2.6
+openai==1.33.0
+openpyxl==3.1.3
+optional-django==0.3.0
+optree==0.11.0
+orjson==3.10.4
+outcome==1.3.0.post0
+overrides==7.7.0
+packaging==24.1
 pandas==1.4.3
-pandas_market_calendars==3.4
+pandas-market-calendars==3.4
+pandocfilters==1.5.1
+parso==0.8.4
+peewee==3.17.5
+pexpect==4.9.0
+pickleshare==0.7.5
+pillow==10.3.0
+platformdirs==4.2.2
 plotly==5.13.0
+ply==3.11
+prometheus_client==0.20.0
+prompt_toolkit==3.0.47
+proto-plus==1.23.0
+protobuf==4.25.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==16.1.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pydantic==2.7.3
+pydantic_core==2.18.4
+pydeck==0.9.1
+Pygments==2.18.0
 pylightxl==1.58
+pyluach==2.2.0
 pymongo==3.12.1
 pyorbital==1.6.1
-python_dateutil==2.8.2
-Requests==2.31.0
-scikit_learn==1.0.1
+pyparsing==3.1.2
+pypdf==4.2.0
+pyreqwest_impersonate==0.4.7
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+python-editor==1.0.4
+python-json-logger==2.0.7
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+qtconsole==5.5.2
+QtPy==2.4.1
+readchar==4.1.0
+referencing==0.35.1
+regex==2024.5.15
+requests==2.31.0
+requests-oauthlib==2.0.0
+retrying==1.3.4
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.7.1
+rpds-py==0.18.1
+rsa==4.9
+ruff==0.4.8
+runs==1.2.2
+scipy==1.13.1
+selenium==4.21.0
+Send2Trash==1.8.3
+shapely==2.0.4
+simpleeval==0.9.13
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+socksio==1.0.0
+sortedcontainers==2.4.0
+soupsieve==2.5
+SQLAlchemy==2.0.30
+stack-data==0.6.3
+streamlit==1.35.0
+StrEnum==0.4.15
+tabulate==0.9.0
+tenacity==8.3.0
+terminado==0.18.1
+tiktoken==0.7.0
+tinycss2==1.3.0
+tokenizers==0.19.1
+tokentrim==0.1.13
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+trio==0.25.1
+trio-websocket==0.11.1
+types-protobuf==5.26.0.20240422
+types-python-dateutil==2.9.0.20240316
+types-requests==2.32.0.20240602
+typing-inspect==0.9.0
+typing_extensions==4.12.2
+tzdata==2024.1
+uri-template==1.3.0
+uritemplate==4.1.1
+urllib3==2.2.1
+watchdog==4.0.1
+wcwidth==0.2.13
+webcolors==24.6.0
+webdriver-manager==4.0.1
+webencodings==0.5.1
+websocket-client==1.8.0
+Werkzeug==2.2.2
+wget==3.2
+widgetsnbextension==4.0.11
+wsproto==1.2.0
+XlsxWriter==3.2.0
 xmltodict==0.12.0
+xmod==1.8.1
+yarl==1.9.4
 yfinance==0.1.70
-
-gspread~=6.0.2
-google~=3.0.0
-python-dateutil~=2.8.2
+zipp==3.19.2
